--- a/project/package.json
+++ b/project/package.json
@@ -18,6 +18,7 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.11",
     "es6-promise": "^4.2.8",
+    "html2canvas": "^1.0.0-rc.5",
     "js-cookie": "^2.2.0",
     "js-md5": "^0.7.3",
     "node-sass": "^4.11.0",
